--- a/index.html
+++ b/index.html
@@ -80,7 +80,35 @@ document.addEventListener('DOMContentLoaded', function() {
     gtag('js', new Date());
 
     gtag('config', 'G-J20GDGQXZP');
-</script></head>
+</script>
+<style>
+    /* Carousel Arrow Styling */
+    #aboutCarousel .carousel-control-prev,
+    #aboutCarousel .carousel-control-next {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+        transform: translateY(-50%);
+        border-radius: 50%;
+        opacity: 0.7;
+    }
+    #aboutCarousel .carousel-control-prev:hover,
+    #aboutCarousel .carousel-control-next:hover {
+        opacity: 1;
+    }
+    #aboutCarousel .carousel-control-prev {
+        left: 15px;
+    }
+    #aboutCarousel .carousel-control-next {
+        right: 15px;
+    }
+    #aboutCarousel .carousel-control-prev-icon,
+    #aboutCarousel .carousel-control-next-icon {
+        width: 24px;
+        height: 24px;
+    }
+</style>
+</head>
 <!-- Google tag (gtag.js) -->
 
 
@@ -173,6 +201,16 @@ document.addEventListener('DOMContentLoaded', function() {
                                 <img class="img-fluid w-100" src="img/3.jpeg" alt="">
                             </div>
                         </div>
+                        <!-- Left Arrow -->
+                        <a class="carousel-control-prev" href="#aboutCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <!-- Right Arrow -->
+                        <a class="carousel-control-next" href="#aboutCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                     <div class="bg-primary text-white text-center p-4">
                         <h3 class="m-0 text-white">25+ Years Experience</h3>
